Change Google API from VISION API to Document AI which is way better and refactored most of the code

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@
 .externalNativeBuild
 .cxx
 local.properties
+!local.properties.template
 # Keystore files
 *.keystore
 keystore.properties
+
+# Google Cloud Service Account Key
+app/src/main/assets/service-account-key.json
